QPID-2610: Corrected Map usage and removed Integer object creation
Applied patch from Andrew Kennedy <andrew.international@gmail.com>


git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@947640 13f79535-47bb-0310-9956-ffa450edef68